objects/smagicinteract__Conversation__c.object
<CustomObject>
    <fields>
        <fullName>attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>evt__Attendee__c</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App Action</label>
        <referenceTo>smagicinteract__Converse_App_Action__c</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Converse_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converse App</label>
        <referenceTo>smagicinteract__Converse_App__c</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Inbound_Number__c</fullName>
        <label>Inbound Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Last_Incoming_Time__c</fullName>
        <label>Last Incoming Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Last_Message_Direction__c</fullName>
        <label>Last Message Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OUT</fullName>
                    <default>true</default>
                    <label>OUT</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Last_Message_Time__c</fullName>
        <label>Last Message Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Last_Outgoing_Time__c</fullName>
        <label>Last Outgoing Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__New_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Purpose__c</fullName>
        <label>Purpose</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sender</label>
        <referenceTo>smagicinteract__SMS_SenderId__c</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>conversations</relationshipLabel>
        <relationshipName>conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>conversations</relationshipLabel>
        <relationshipName>conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__isUnread__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUnread</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>conversations</relationshipLabel>
        <relationshipName>conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Conversation</label>
    <listViews>
        <fullName>Nolan_Daigle_Conversation</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__State__c</columns>
        <columns>smagicinteract__Contact__c</columns>
        <columns>smagicinteract__Converse_App__c</columns>
        <columns>smagicinteract__Lead__c</columns>
        <columns>smagicinteract__New_Count__c</columns>
        <columns>smagicinteract__Object__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>